<resources>
    <string name="app_name">Iftar Planner</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="sign_up">Sign Up</string>
    <string name="login">Login</string>
    <string name="txtguest">Continue as a Guest</string>
    <string name="signup_info">Create a weekly plan and\nsave delicious recipes.</string>
    <string name="sign_in_google">Sign in using Google</string>
    <string name="welcome">Welcome</string>
    <string name="sign_in">Sign In</string>
    <string name="confirm_password">Confirm Password</string>
    <string name="password">Password</string>
    <string name="email">Email</string>
    <string name="name">Name</string>
    <string name="iftar_planner">Iftar Planner</string>
    <string name="plan_your_meals">Plan Your Meals</string>
    <string name="search">Search</string>
    <string name="no_internet">No Internet Connection!</string>
    <string name="ingredient">Ingredient</string>
    <string name="country">Country</string>
    <string name="category">Category</string>
    <string name="hello_chef">Hello, my chef</string>
    <string name="favourite_meals">Favourite Meals</string>
    <string name="planned_meals">Planned Meals</string>
    <string name="logout">Log out</string>
    <string name="meal_name">Meal name</string>
    <string name="beaf">Beaf</string>
    <string name="american">American</string>
    <string name="ingredients">Ingredients</string>
    <string name="instructions">Instructions</string>
    <string name="youtube">Youtube</string>
    <string name="daily_inspiration">Daily Inspiration</string>
    <string name="more_you_like">More You Might Like...</string>
    <string name="saved_meals">All Saved Meals</string>
    <string name="favorites">Favorites</string>
    <string name="profile">Profile</string>
    <string name="menu">Menu</string>
    <string name="home">Home</string>
    <string name="have_account">Already have an account?</string>
    <string name="not_have_account">Don\'t have an account?</string>
    <string name="default_web_client_id">8tfqo5h3sq240i3n52ousmakh2e5nmp3</string>
    <string name="invalid_input">Invalid Input</string>
    <string name="ok">Ok</string>
    <string name="categories">Categories:</string>
    <string name="countries">Countries:</string>
    <string name="meal">Meal</string>
    <string name="ingredients_list">Ingredients List:</string>
    <string name="country_name">Country Name</string>
    <string name="watch_video_now">Watch Video Now!</string>
    <string name="no_search_found">No search found</string>
    <string name="remove">Remove from Favorite</string>
    <string name="remove_from_planned_meals">Remove from Planned Meals</string>

</resources>