<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/ConstraintLayout"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:layout_margin="80dp"
    android:background="@drawable/different_background"
    android:gravity="center">

    <ImageView
        android:id="@+id/dialogIcon"
        android:layout_width="150dp"
        android:layout_height="80dp"
        android:layout_marginTop="40dp"
        android:src="@drawable/sad"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"/>

        <TextView
        android:id="@+id/dialogMessage"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:gravity="center"
        android:textColor="@color/primary_dark"
        android:textSize="18sp"
        android:textStyle="bold"
        app:layout_constraintTop_toBottomOf="@id/dialogIcon"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        tools:text="@string/invalid_input" />

    <Button
        android:id="@+id/dialogButton"
        android:layout_width="0dp"
        android:layout_height="60dp"
        android:layout_marginTop="20dp"
        android:backgroundTint="@color/primary_dark"
        android:text="@string/ok"
        android:textColor="@color/background"
        android:textSize="20sp"
        style="@style/editText"
        app:layout_constraintTop_toBottomOf="@id/dialogMessage"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toStartOf="@id/dialogSignUpButton"
        app:layout_constraintHorizontal_bias="0.5" />

    <Button
        android:id="@+id/dialogSignUpButton"
        android:layout_width="0dp"
        android:layout_height="60dp"
        android:layout_marginTop="20dp"
        android:backgroundTint="@color/primary_dark"
        android:text="@string/sign_up"
        android:textColor="@color/background"
        android:textSize="20sp"
        style="@style/editText"
        app:layout_constraintTop_toBottomOf="@id/dialogMessage"
        app:layout_constraintStart_toEndOf="@id/dialogButton"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5" />

</androidx.constraintlayout.widget.ConstraintLayout>
