<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/different_background"
    android:backgroundTintMode="multiply"
    tools:context=".Views.ProfileFragment">


    <ProgressBar
        android:id="@+id/progress_bar"
        style="?android:attr/progressBarStyle"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:visibility="gone"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/textView2"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:fontFamily="@font/sigmar"
        android:text="@string/hello_chef"
        android:textAlignment="center"
        android:textSize="24sp"
        app:layout_constraintBottom_toTopOf="@+id/imageView2"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <ImageView
        android:id="@+id/imageView2"
        android:layout_width="176dp"
        android:layout_height="201dp"
        android:src="@drawable/user"
        app:layout_constraintBottom_toTopOf="@+id/fav"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView2" />


    <TextView
        android:id="@+id/fav"
        android:layout_width="230dp"
        android:layout_height="wrap_content"
        android:background="@drawable/custom_edittext"
        android:drawableLeft="@drawable/heart"
        android:drawableTint="@color/primary_dark"
        android:padding="8dp"
        android:text="@string/favourite_meals"
        android:paddingStart="8dp"
        android:drawablePadding="8dp"
        android:textSize="16sp"
        app:layout_constraintBottom_toTopOf="@+id/planned"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/imageView2" />

    <TextView
        android:id="@+id/planned"
        android:layout_width="230dp"
        android:layout_height="wrap_content"
        android:background="@drawable/custom_edittext"
        android:drawableLeft="@drawable/baseline_edit_calendar_24"
        android:drawableTint="@color/primary_dark"
        android:padding="8dp"
        android:text="@string/planned_meals"
        android:paddingStart="8dp"
        android:drawablePadding="8dp"
        android:textSize="16sp"
        app:layout_constraintBottom_toTopOf="@+id/logout_btn"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/fav" />

    <Button
        android:id="@+id/logout_btn"
        style="@style/editText"
        android:layout_width="230dp"
        android:layout_height="wrap_content"
        android:fontFamily="@font/sigmar"
        android:padding="8dp"
        android:text="@string/logout"
        android:textSize="16sp"
        android:background="@drawable/custom_edittext"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/planned" />

</androidx.constraintlayout.widget.ConstraintLayout>

