<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/welcomeScreen"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/different_background"
    >

    <androidx.cardview.widget.CardView
        android:id="@+id/cardView"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="-20dp"
        android:layout_marginEnd="16dp"
        android:layout_marginBottom="20dp"
        android:backgroundTint="@color/primary_light"
        app:cardCornerRadius="16dp"
        app:cardElevation="8dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/imageView5">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="383dp"
            android:padding="20dp">

            <TextView
                android:id="@+id/txtGuest"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="80dp"
                android:layout_marginEnd="80dp"
                android:text="@string/txtguest"
                android:textAlignment="center"
                android:textColor="@color/primary_dark"
                android:textSize="24sp"
                style="@style/editText"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.5"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/btnGoogle" />

            <Button
                android:id="@+id/btnSignUp"
                android:layout_width="250dp"
                android:layout_height="55dp"
                android:layout_marginStart="80dp"
                android:layout_marginEnd="80dp"
                android:backgroundTint="#19374F"
                android:text="@string/sign_up"
                android:textAlignment="center"
                android:textSize="18sp"
                style="@style/editText"
                app:layout_constraintBottom_toTopOf="@+id/btnLogin"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.5"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/txtWelcome" />

            <Button
                android:id="@+id/btnLogin"
                android:layout_width="250dp"
                android:layout_height="55dp"
                android:layout_marginStart="80dp"
                android:layout_marginEnd="80dp"
                android:backgroundTint="#19374F"
                android:text="@string/login"
                android:textAlignment="center"
                android:textSize="18sp"
                style="@style/editText"
                app:layout_constraintBottom_toTopOf="@+id/btnGoogle"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.5"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/btnSignUp" />

            <TextView
                android:id="@+id/txtWelcome"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="80dp"
                android:layout_marginEnd="80dp"
                android:text="@string/welcome"
                android:textAlignment="center"
                android:textColor="@color/primary_dark"
                android:textSize="36sp"
                android:drawableStart="@drawable/islamic_lantern"
                android:drawableEnd="@drawable/islamic_lantern"
                android:drawablePadding="8dp"
                style="@style/editText"
                android:textStyle="bold"
                app:layout_constraintBottom_toTopOf="@+id/btnSignUp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.5"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <Button
                android:id="@+id/btnGoogle"
                android:layout_width="250dp"
                android:layout_height="55dp"
                android:layout_marginStart="80dp"
                android:layout_marginEnd="80dp"
                android:drawableEnd="@drawable/google_icon"
                android:text="@string/sign_in_google"
                android:textAlignment="center"
                android:textSize="18sp"
                style="@style/editText"
                android:textStyle="bold"
                app:layout_constraintBottom_toTopOf="@+id/txtGuest"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.5"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/btnLogin" />


        </androidx.constraintlayout.widget.ConstraintLayout>
    </androidx.cardview.widget.CardView>

    <ImageView
        android:id="@+id/imageView5"
        android:layout_width="410dp"
        android:layout_height="380dp"
        android:layout_marginTop="-20dp"
        android:layout_marginEnd="1dp"
        android:scaleType="centerCrop"
        android:src="@drawable/familycrop"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" /> />


</androidx.constraintlayout.widget.ConstraintLayout>