<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/home_fragment"
    android:layout_width="match_parent"
    android:fitsSystemWindows="true"
    android:layout_height="wrap_content">


    <androidx.core.widget.NestedScrollView
        android:id="@+id/nestedScrollerHome"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@drawable/different_background"
        android:fillViewport="true"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        >

        <androidx.constraintlayout.widget.ConstraintLayout
            android:id="@+id/homeFragment"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/different_background">


            <TextView
                android:id="@+id/daily_inspiration"
                style="@style/editText"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textSize="26sp"
                android:layout_marginTop="20dp"
                android:drawableStart="@drawable/islamic_lantern"
                android:drawableEnd="@drawable/islamic_lantern"
                android:drawablePadding="8dp"
                android:fontFamily="@font/sigmar"
                android:text="@string/daily_inspiration"
                android:textColor="@color/primary_dark"
                app:layout_constraintEnd_toEndOf="@+id/cardView"
                app:layout_constraintStart_toStartOf="@+id/cardView"
                app:layout_constraintTop_toTopOf="parent" />

            <ImageView
                android:id="@+id/imageView4"
                android:layout_width="100dp"
                android:layout_height="80dp"
                android:scaleType="fitXY"
                app:layout_constraintStart_toEndOf="@+id/tvAllFav"
                app:layout_constraintTop_toBottomOf="@+id/cardView"
                app:srcCompat="@drawable/yummy" />

            <androidx.cardview.widget.CardView
                android:id="@+id/cardView"
                android:layout_width="match_parent"
                android:layout_height="300dp"
                android:layout_margin="16dp"
                android:background="@drawable/different_background"
                app:cardCornerRadius="16dp"
                app:cardElevation="8dp"
                android:backgroundTint="@color/primary_light"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/daily_inspiration">

                <com.jackandphantom.carouselrecyclerview.CarouselRecyclerview
                    android:id="@+id/recycler_view_random"
                    android:layout_width="match_parent"
                    android:layout_height="300dp"
                    android:layout_marginTop="8dp"
                    app:layout_constraintLeft_toLeftOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/dailyText" />

            </androidx.cardview.widget.CardView>


            <TextView
                android:id="@+id/tvAllFav"
                style="@style/editText"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="25dp"
                android:layout_marginTop="8dp"
                android:layout_marginEnd="145dp"
                android:fontFamily="@font/sigmar"
                android:text="@string/more_you_like"
                android:textColor="@color/primary_dark"
                android:textSize="20sp"
                android:paddingStart="8dp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/cardView" />

            <TextView
                android:id="@+id/categories"
                style="@style/editText"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="4dp"
                android:text="@string/categories"
                android:textColor="@color/primary_dark"
                android:textSize="16sp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.06"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/tvAllFav" />

            <com.jackandphantom.carouselrecyclerview.CarouselRecyclerview
                android:id="@+id/recycler_view_category"
                android:layout_width="match_parent"
                android:layout_height="250dp"
                android:background="@color/primary_dark"
                android:paddingTop="12dp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/categories" />

            <TextView
                android:id="@+id/countries"
                style="@style/editText"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="4dp"
                android:text="@string/countries"
                android:textColor="@color/primary_dark"
                android:textSize="16sp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.045"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/recycler_view_category" />

            <androidx.recyclerview.widget.RecyclerView
                android:id="@+id/recyclerViewCountries"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:minHeight="200dp"
                app:layout_constraintTop_toBottomOf="@+id/countries"
                android:paddingBottom="70dp"
               />

            <!-- Constraint to the bottom navigation -->

        </androidx.constraintlayout.widget.ConstraintLayout>
</androidx.core.widget.NestedScrollView>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/noInternet_layout_home"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:visibility="gone"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <com.airbnb.lottie.LottieAnimationView
            android:id="@+id/no_internet_image"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:lottie_autoPlay="true"
            app:lottie_loop="true"
            app:lottie_rawRes="@raw/wait" />

        <TextView
            android:id="@+id/txtInternetConnection"
            style="@style/editText"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/no_internet"
            android:textColor="@color/primary_dark"
            android:textSize="16sp"
            android:textStyle="bold"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent" />

        <TextView
            android:id="@+id/check_internet_text"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:fontFamily="@font/sigmar"
            android:gravity="center"
            android:text="Check your Internet Connection\n and Try Again."
            android:textColor="@color/primary_dark"
            android:textSize="16sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/txtInternetConnection" />
    </androidx.constraintlayout.widget.ConstraintLayout>


</androidx.constraintlayout.widget.ConstraintLayout>